--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,14 @@
 
  <distributionManagement>
     <repository>
-      <id>releases</id>
+      <id>maven-releases</id>
       <!-- CHANGE HERE by your team nexus server -->
-      <url>http://54.159.150.139:8081/nexus/content/repositories/releases/</url>
+      <url>http://54.244.41.146:8081/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
-      <id>snapshots</id>
+      <id>maven-snapshots</id>
       <!-- CHANGE HERE by your team nexus server -->
-      <url>http://54.159.150.139:8081/nexus/content/repositories/snapshots/</url>
+      <url>http://54.244.41.146:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
