--- a/test.yml
+++ b/test.yml
@@ -7,4 +7,4 @@
      artifact_id: lambda-java-example
      version: 1.1
      repository_url: 'http://172.31.49.52:8081/repository/maven-releases/'
-     dest: /tmp/
+     dest: /var/lib/tomcat8/webapps
