--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
           </execution>
         </executions>
       </plugin>
+    <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-pmd-plugin</artifactId>
+  <version>3.10.0</version>
+</plugin>
     </plugins>
   </build>
 </project>
+
