--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,23 @@
         </executions>
       </plugin>
     <plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-pmd-plugin</artifactId>
-  <version>3.10.0</version>
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <configuration>
+            <failOnViolation>true</failOnViolation> <!-- this is actually true by default, but can be disabled -->
+            <printFailingErrors>true</printFailingErrors>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
 </plugin>
     </plugins>
   </build>
