--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,6 @@
           </execution>
         </executions>
       </plugin>
-    <plugin>
-  <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
@@ -50,10 +48,9 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-    </plugins>
-</plugin>
-    </plugins>
-  </build>
-</project>
-
+      </plugin>	    
+    <plugin>
+    <build>	    
+</project>	    
+	    
+  
