--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
           </execution>
         </executions>
       </plugin>	    
-    <plugin>
-    <build>	    
+    </plugins>
+    </build>	    
 </project>	    
 	    
   
