--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,17 @@
       <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-pmd-plugin</artifactId>
+      <version>3.8</version>
       </plugin>
       <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jxr-plugin</artifactId>
+      <version>2.5</version>
       </plugin>
       <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-javadoc-plugin</artifactId>
+      <version>3.0.0</version>
       </plugin>
       </plugins>
     </build>	    
